--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,17 +41,17 @@
         app:srcCompat="@drawable/ic_baseline_check_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        style="@style/Theme.TargetProject.Buttons"
         android:id="@+id/addTarget_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/black"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@id/closeApp_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_add_24"
-        app:tint="@color/white" />
+         />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
