--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,4 +29,9 @@
     <style name="Theme.TargetProject.ImageView" >
         <item name="android:scaleType">fitCenter</item>
     </style>
+    <style name="Theme.TargetProject.Buttons" >
+        <item name="backgroundTint">@color/black</item>
+        <item name="tint">@color/white</item>
+    </style>
+
 </resources>
