--- a/app/src/main/res/layout/activity_add_target.xml
+++ b/app/src/main/res/layout/activity_add_target.xml
@@ -18,6 +18,8 @@
         android:id="@+id/addTarget_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         app:layout_constraintTop_toBottomOf="@+id/addTargetHDR_textView"
         />
 
